--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.domain=C:/Users/Admin/glassfish5/glassfish/domains/domain1
 j2ee.server.home=C:/Users/Admin/glassfish5/glassfish
 j2ee.server.instance=[C:\\Users\\Admin\\glassfish5\\glassfish;C:\\Users\\Admin\\glassfish5\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Users/Admin/glassfish5
-selected.browser=default
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
